kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-app
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ml-app
  template:
    metadata:
      labels:
        app: ml-app
    spec:
      containers:
        - name: ml-app
          image: docker.io/ezmelillan/ml-challenge:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5050
  # Rolling update strategy with controlled rollout
  strategy:
    rollingUpdate:
      maxSurge: 25% # Maximum number of pods that can be created beyond the desired replicas
      maxUnavailable: 1 # Maximum number of unavailable pods during update
