kubernetes/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
  namespace: ingress-nginx
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redisport
  selector:
    app: redis
