kubernetes/service-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: ml-app-service
  namespace: ingress-nginx
spec:
  selector:
    app: ml-app
  ports:
    - port: 80
      targetPort: 5050
      nodePort: 30008
  type: LoadBalancer
